# news_aggregator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.py
bot/: bot.py
common/: __init__.py  algorithms.py  categories.py
datasets/: client.py  sanitizing.py
datasets/categories/: channels.py  output.py  parse.py
datasets/duplicates/: database.py  nyan.py
notebooks/: sentence_classification.ipynb  sentence_transformers.ipynb  sentence_transformers_test.ipynb
web/: app.py
